    function calls. (Issue #782)

Deprecations
  * analysis.hole is deprecated in 1.0 (remove in 2.0)
  * analysis.hbonds.HydrogenBondAnalysis is deprecated in 1.0 (remove in 2.0)
  * analysis.density.density_from_Universe() (remove in 2.0)
  * analysis.density.notwithin_coordinates_factory() (remove in 2.0)
  * analysis.density.density_from_PDB and BfactorDensityCreator (remove in 2.0)


09/05/19 IAlibay, richardjgowers

  * 0.20.1

Fixes
  * The NetCDF writer now writes `cell_angle` units as `degree` instead of
    `degrees` in accordance with the AMBER NetCDF convention (Issue #2327).
  * Fixed installation without Cython (Issue #2337)


08/28/19 micaela-matta, xiki-tempula, zemanj, mattwthompson, orbeckst, aliehlen,
         dpadula85, jbarnoud, manuel.nuno.melo, richardjgowers, mattwthompson,
         ayushsuhane, picocentauri, NinadBhat, bieniekmateusz, p-j-smith, Lp0lp,
         IAlibay, tyler.je.reddy, aakognole, RMeli, lilyminium

  * 0.20.0

Enhancements
  * improved metal atom guess (Issue #2323)
  * improved atom element guessing in topology.guessers to check for elements
    after the first element (#2313)
  * added the zero-based index selection keyword (Issue #1959)
  * added position averaging transformation that makes use of the
    transformations API (PR #2208)
  * added find_hydrogen_donors to analysis.bonds.hbond_autocorrel to
    automatically determine donors where possible (#2181)
  * added analysis.polymer.sort_backbone to rearrange backbone atoms into
    sequential order (bondwise) (PR #2141)
  * added record_type to select_atoms language (PR #2179)
  * center, centroid, center_of_geometry, center_of_mass can now be computed per
    molecule or per fragment (PR #2182)
  * Atoms (AtomGroups) have a new fragindex (fragindices) property corresponding
    to the respective fragment (fragments) (PR #2182)
  * Atom-, Residue-, and SegmentGroups have a new unwrap() method allowing to