@@ -56,5 +56,5 @@ class NullWriter(base.WriterBase):
     def __init__(self, filename, **kwargs):
         pass
 
-    def write_next_timestep(self, ts=None):
+    def _write_next_frame(self, obj):
         pass
